--- a/src/main/resources/fxml/showconnections.fxml
+++ b/src/main/resources/fxml/showconnections.fxml
@@ -13,7 +13,7 @@
             </TableColumn>
             <TableColumn text="Departure">
                 <cellValueFactory>
-                    <PropertyValueFactory property="departureTimestamp"/>
+                    <PropertyValueFactory property="departure"/>
                 </cellValueFactory>
             </TableColumn>
 
@@ -25,7 +25,7 @@
 
             <TableColumn text="Arrival">
                 <cellValueFactory>
-                    <PropertyValueFactory property="arrivalTimestamp"/>
+                    <PropertyValueFactory property="arrival"/>
                 </cellValueFactory>
             </TableColumn>
 
