--- a/src/main/resources/alexskxy/transportfinder/part/departureboard.fxml
+++ b/src/main/resources/alexskxy/transportfinder/part/departureboard.fxml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.control.*?>
 <fx:root type="javafx.scene.control.TitledPane" xmlns:fx="http://javafx.com/fxml"
          minWidth="500" style="-fx-fit-to-width: true"
          text="Abfahrten"
