--- a/src/main/resources/alexskxy/transportfinder/part/showconnections.fxml
+++ b/src/main/resources/alexskxy/transportfinder/part/showconnections.fxml
@@ -1,6 +1,6 @@
 <?import javafx.scene.control.cell.*?>
 <?import javafx.scene.control.*?>
-<fx:root type="javafx.scene.control.TitledPane" xmlns:fx="http://javafx.com/fxml" collapsible="false" expanded="false"
+<fx:root type="javafx.scene.control.TitledPane" xmlns:fx="http://javafx.com/fxml"
          minWidth="500" style="-fx-fit-to-width: true"
          text="Verbindungen"
 >
