autocomplete fixes and placeholder text for tableviews

--- a/src/main/resources/alexskxy/transportfinder/part/showconnections.fxml
+++ b/src/main/resources/alexskxy/transportfinder/part/showconnections.fxml
@@ -5,6 +5,9 @@
          text="Verbindungen"
 >
     <TableView fx:id="connectionView" style="-fx-fit-to-width: true">
+        <placeholder>
+            <Label text="Keine Abfahrten gefunden"/>
+        </placeholder>
         <columns>
             <TableColumn text="From">
                 <cellValueFactory>
