--- a/src/main/resources/alexskxy/transportfinder/part/departureboard.fxml
+++ b/src/main/resources/alexskxy/transportfinder/part/departureboard.fxml
@@ -7,6 +7,9 @@
          text="Abfahrten"
 >
     <TableView fx:id="departureView" style="-fx-fit-to-width: true">
+        <placeholder>
+            <Label text="Keine Abfahrten gefunden"/>
+        </placeholder>
         <columns>
             <TableColumn text="From">
                 <cellValueFactory>
