--- a/src/main/resources/alexskxy/transportfinder/main.fxml
+++ b/src/main/resources/alexskxy/transportfinder/main.fxml
@@ -5,9 +5,9 @@
 <?import alexskxy.transportfinder.part.ShowConnectionsController?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.layout.VBox?>
-<VBox minHeight="250" minWidth="750" spacing="10"
-      style="-fx-padding: 10; -fx-fit-to-width: true; -fx-fit-to-height: true"
-      xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+<VBox xmlns:fx="http://javafx.com/fxml/1" minHeight="250" minWidth="750"
+      spacing="10"
+      style="-fx-padding: 10; -fx-fit-to-width: true; -fx-fit-to-height: true" xmlns="http://javafx.com/javafx/11.0.1"
       fx:controller="alexskxy.transportfinder.MainController">
     <Accordion expandedPane="$searchConnectionsComponent">
         <panes>
